# backend/public/swagger.json
@@ -948,6 +948,576 @@
           }
         }
       }
+    },
+    "/produtos": {
+      "get": {
+        "operationId": "listaProdutos",
+        "tags": [
+          "Produtos"
+        ],
+        "description": "Lista todos os produtos do sistema",
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Default Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "id": {
+                        "type": "number"
+                      },
+                      "codigo": {
+                        "type": "string"
+                      },
+                      "nome": {
+                        "type": "string"
+                      },
+                      "categoria": {
+                        "type": "string"
+                      },
+                      "marca": {
+                        "type": "string"
+                      },
+                      "modelo": {
+                        "type": "string",
+                        "nullable": true
+                      },
+                      "descricao": {
+                        "type": "string",
+                        "nullable": true
+                      },
+                      "unidadeMedida": {
+                        "type": "string"
+                      },
+                      "quantidadeMinima": {
+                        "type": "number"
+                      },
+                      "ativo": {
+                        "type": "boolean"
+                      },
+                      "tipoArmazenamento": {
+                        "type": "string",
+                        "enum": [
+                          "SECO",
+                          "REFRIGERADO",
+                          "CONGELADO",
+                          "AMBIENTE"
+                        ]
+                      },
+                      "tipoConsumo": {
+                        "type": "string",
+                        "enum": [
+                          "CONSUMIVEL",
+                          "NAO_CONSUMIVEL",
+                          "SEMI_CONSUMIVEL"
+                        ]
+                      },
+                      "tipoConsumoDetalhe": {
+                        "type": "string",
+                        "enum": [
+                          "POR_DOSE",
+                          "POR_UNIDADE",
+                          "POR_VOLUME"
+                        ]
+                      },
+                      "volumePorUnidade": {
+                        "type": "number",
+                        "nullable": true
+                      },
+                      "mlPorDose": {
+                        "type": "number",
+                        "nullable": true
+                      },
+                      "dosesPorUnidade": {
+                        "type": "number",
+                        "nullable": true
+                      }
+                    },
+                    "required": [
+                      "id",
+                      "codigo",
+                      "nome",
+                      "categoria",
+                      "marca",
+                      "unidadeMedida",
+                      "quantidadeMinima",
+                      "ativo",
+                      "tipoArmazenamento",
+                      "tipoConsumo",
+                      "tipoConsumoDetalhe"
+                    ],
+                    "additionalProperties": false
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "operationId": "criaProduto",
+        "tags": [
+          "Produtos"
+        ],
+        "description": "Cadastra um produto no sistema",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "codigo": {
+                    "type": "string"
+                  },
+                  "nome": {
+                    "type": "string"
+                  },
+                  "categoria": {
+                    "type": "string"
+                  },
+                  "marca": {
+                    "type": "string"
+                  },
+                  "modelo": {
+                    "type": "string"
+                  },
+                  "descricao": {
+                    "type": "string"
+                  },
+                  "unidadeMedida": {
+                    "type": "string"
+                  },
+                  "quantidadeMinima": {
+                    "type": "integer",
+                    "minimum": 0,
+                    "maximum": 9007199254740991
+                  },
+                  "ativo": {
+                    "default": true,
+                    "type": "boolean"
+                  },
+                  "tipoArmazenamento": {
+                    "type": "string",
+                    "enum": [
+                      "SECO",
+                      "REFRIGERADO",
+                      "CONGELADO",
+                      "AMBIENTE"
+                    ]
+                  },
+                  "tipoConsumo": {
+                    "type": "string",
+                    "enum": [
+                      "CONSUMIVEL",
+                      "NAO_CONSUMIVEL",
+                      "SEMI_CONSUMIVEL"
+                    ]
+                  },
+                  "tipoConsumoDetalhe": {
+                    "type": "string",
+                    "enum": [
+                      "POR_DOSE",
+                      "POR_UNIDADE",
+                      "POR_VOLUME"
+                    ]
+                  },
+                  "volumePorUnidade": {
+                    "type": "number"
+                  },
+                  "mlPorDose": {
+                    "type": "number"
+                  },
+                  "dosesPorUnidade": {
+                    "type": "number"
+                  }
+                },
+                "required": [
+                  "codigo",
+                  "nome",
+                  "categoria",
+                  "marca",
+                  "unidadeMedida",
+                  "quantidadeMinima",
+                  "tipoArmazenamento",
+                  "tipoConsumo",
+                  "tipoConsumoDetalhe"
+                ]
+              }
+            }
+          },
+          "required": true
+        },
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Default Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "id": {
+                      "type": "number"
+                    }
+                  },
+                  "required": [
+                    "id"
+                  ],
+                  "additionalProperties": false
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/produto/{id}": {
+      "get": {
+        "operationId": "listaProduto",
+        "tags": [
+          "Produtos"
+        ],
+        "description": "Busca um produto pelo ID",
+        "parameters": [
+          {
+            "schema": {
+              "type": "number"
+            },
+            "in": "path",
+            "name": "id",
+            "required": true
+          }
+        ],
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Default Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "id": {
+                      "type": "number"
+                    },
+                    "codigo": {
+                      "type": "string"
+                    },
+                    "nome": {
+                      "type": "string"
+                    },
+                    "categoria": {
+                      "type": "string"
+                    },
+                    "marca": {
+                      "type": "string"
+                    },
+                    "modelo": {
+                      "type": "string",
+                      "nullable": true
+                    },
+                    "descricao": {
+                      "type": "string",
+                      "nullable": true
+                    },
+                    "unidadeMedida": {
+                      "type": "string"
+                    },
+                    "quantidadeMinima": {
+                      "type": "number"
+                    },
+                    "ativo": {
+                      "type": "boolean"
+                    },
+                    "tipoArmazenamento": {
+                      "type": "string",
+                      "enum": [
+                        "SECO",
+                        "REFRIGERADO",
+                        "CONGELADO",
+                        "AMBIENTE"
+                      ]
+                    },
+                    "tipoConsumo": {
+                      "type": "string",
+                      "enum": [
+                        "CONSUMIVEL",
+                        "NAO_CONSUMIVEL",
+                        "SEMI_CONSUMIVEL"
+                      ]
+                    },
+                    "tipoConsumoDetalhe": {
+                      "type": "string",
+                      "enum": [
+                        "POR_DOSE",
+                        "POR_UNIDADE",
+                        "POR_VOLUME"
+                      ]
+                    },
+                    "volumePorUnidade": {
+                      "type": "number",
+                      "nullable": true
+                    },
+                    "mlPorDose": {
+                      "type": "number",
+                      "nullable": true
+                    },
+                    "dosesPorUnidade": {
+                      "type": "number",
+                      "nullable": true
+                    }
+                  },
+                  "required": [
+                    "id",
+                    "codigo",
+                    "nome",
+                    "categoria",
+                    "marca",
+                    "unidadeMedida",
+                    "quantidadeMinima",
+                    "ativo",
+                    "tipoArmazenamento",
+                    "tipoConsumo",
+                    "tipoConsumoDetalhe"
+                  ],
+                  "additionalProperties": false
+                }
+              }
+            }
+          }
+        }
+      },
+      "put": {
+        "operationId": "alteraProduto",
+        "tags": [
+          "Produtos"
+        ],
+        "description": "Atualiza os dados de um produto",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "codigo": {
+                    "type": "string"
+                  },
+                  "nome": {
+                    "type": "string"
+                  },
+                  "categoria": {
+                    "type": "string"
+                  },
+                  "marca": {
+                    "type": "string"
+                  },
+                  "modelo": {
+                    "type": "string"
+                  },
+                  "descricao": {
+                    "type": "string"
+                  },
+                  "unidadeMedida": {
+                    "type": "string"
+                  },
+                  "quantidadeMinima": {
+                    "type": "integer",
+                    "minimum": 0,
+                    "maximum": 9007199254740991
+                  },
+                  "ativo": {
+                    "default": true,
+                    "type": "boolean"
+                  },
+                  "tipoArmazenamento": {
+                    "type": "string",
+                    "enum": [
+                      "SECO",
+                      "REFRIGERADO",
+                      "CONGELADO",
+                      "AMBIENTE"
+                    ]
+                  },
+                  "tipoConsumo": {
+                    "type": "string",
+                    "enum": [
+                      "CONSUMIVEL",
+                      "NAO_CONSUMIVEL",
+                      "SEMI_CONSUMIVEL"
+                    ]
+                  },
+                  "tipoConsumoDetalhe": {
+                    "type": "string",
+                    "enum": [
+                      "POR_DOSE",
+                      "POR_UNIDADE",
+                      "POR_VOLUME"
+                    ]
+                  },
+                  "volumePorUnidade": {
+                    "type": "number"
+                  },
+                  "mlPorDose": {
+                    "type": "number"
+                  },
+                  "dosesPorUnidade": {
+                    "type": "number"
+                  }
+                },
+                "required": [
+                  "codigo",
+                  "nome",
+                  "categoria",
+                  "marca",
+                  "unidadeMedida",
+                  "quantidadeMinima",
+                  "tipoArmazenamento",
+                  "tipoConsumo",
+                  "tipoConsumoDetalhe"
+                ]
+              }
+            }
+          },
+          "required": true
+        },
+        "parameters": [
+          {
+            "schema": {
+              "type": "number"
+            },
+            "in": "path",
+            "name": "id",
+            "required": true
+          }
+        ],
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Default Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {},
+                  "additionalProperties": false
+                }
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "operationId": "removeProduto",
+        "tags": [
+          "Produtos"
+        ],
+        "description": "Remove um produto do sistema",
+        "parameters": [
+          {
+            "schema": {
+              "type": "number"
+            },
+            "in": "path",
+            "name": "id",
+            "required": true
+          }
+        ],
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Default Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {},
+                  "additionalProperties": false
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/produto/{id}/status": {
+      "patch": {
+        "operationId": "alteraStatusProduto",
+        "tags": [
+          "Produtos"
+        ],
+        "description": "Ativa ou inativa um produto",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "ativo": {
+                    "type": "boolean"
+                  }
+                },
+                "required": [
+                  "ativo"
+                ]
+              }
+            }
+          },
+          "required": true
+        },
+        "parameters": [
+          {
+            "schema": {
+              "type": "number"
+            },
+            "in": "path",
+            "name": "id",
+            "required": true
+          }
+        ],
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Default Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {},
+                  "additionalProperties": false
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "servers": [
